added user input

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="styling.css">
 	<title>Validator</title>
-	<script type="text/javascript" src="response.js"></script>
 </head>
 <body>
-This page is to test the validator
+Paste your code here!
+<br>
+<textarea id="file" rows = "35" cols = "100">
+
+</textarea>
+<br>
+<button onclick="buttonClick()">Submit</button>
+<script type="text/javascript" src="response.js"></script>
 </body>
 </html>
