Fixed naming and added title image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/x-icon" href="title.png">
 	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   	crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="styling.css">
@@ -16,7 +17,7 @@
 <br>
 <div class="mt-md-0 m-3 form-group">
 	  <label for="comment">Your Code:</label>
-	  <textarea placeholder="Welcome" class="form-control" rows="10" cols="10" id="file"></textarea>
+	  <textarea placeholder="Express your feelings with your code!" class="form-control" rows="10" id="file"></textarea>
 </div>
 <br>
 <button type="button" id="butt" class=" mt-md-0 m-3 btn btn-success" onclick="buttonClick()">Submit</button>
